--- a/backend/package.json
+++ b/backend/package.json
@@ -1,49 +1,34 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "backend is the ultimate backend solution",
-  "main": "src/server.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-      "setup": "npm install && npm update",
-      "start": "nodemon src/server.js",
-      "test": "jest --setupFiles dotenv/config"
-  },      
-  "keywords": [
-      "express",
-      "backend"
-  ],
-  "license": "APACHE-2.0",
+    "setup": "npm install && npm update",
+    "migration:init": "migrate init --migrations-dir ./migrations",
+    "start": "nodemon ./app.js",
+    "test": "jest"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-      "bcryptjs": "^2.4.3",
-      "chai": "^4.3.10",
-      "cookie-parser": "^1.4.4",
-      "cors": "^2.8.5",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2",
-      "express-custom-error": "^1.8.4",
-      "has-keys": "^0.1.0",
-      "helmet": "^3.21.2",
-      "http-status": "^1.3.2",
-      "jsonwebtoken": "^9.0.2",
-      "mandatoryenv": "^1.1.1",
-      "migrate": "^1.6.2",
-      "mocha": "^10.2.0",
-      "module-alias": "^2.2.2",
-      "morgan": "^1.9.1",
-      "multer": "^1.4.5-lts.1",
-      "mysql2": "^3.6.3",
-      "nodemon": "^3.0.1",
-      "pg": "^8.11.3",
-      "pg-hstore": "^2.3.4",
-      "rotating-file-stream": "^1.4.6",
-      "sequelize": "^6.34.0"
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "migrate": "^2.0.0",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.0"
   },
   "devDependencies": {
-      "@types/chai": "^4.3.10",
-      "@types/jest": "^29.5.8",
-      "@types/mocha": "^10.0.4",
-      "@types/node": "^20.9.0",
-      "jest": "^29.7.0",
-      "supertest": "^6.3.3"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "sequelize-cli": "^6.6.2",
+    "supertest": "^6.3.3"
   }
 }
